# conceptable

./: MANIFEST.in  README.md  setup.cfg
src/conceptable/: __main__.py  version.py
src/conceptable/data/: logger.ini
