[metadata]
name = conceptable
version = attr: conceptable.version.__version__
url = https://github.com/sunarch/conceptable
project_urls =
    Bug Tracker = https://github.com/sunarch/conceptable/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Database :: Front-Ends
    Topic :: Office/Business :: News/Diary
    Topic :: Text Editors :: Text Processing
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = conceptable - personal note and data management
long_description = file: README.md
long_description_content_type = text/markdown
keywords = conceptable
platforms = Any

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/conceptable

[options.entry_points]
console_scripts =
    conceptable = conceptable.__main__:main

[options.packages.find]
where = src

[options.package_data]
    conceptable = data/logger.ini
